0027621: Highlighting with color remains visible when shape is erased.